# zenith

./: .envrc  Cargo.toml  flake.nix  test.z
data/: Cargo.toml
lingua/: Cargo.toml
lingua/system/: Cargo.toml  lib.rs
macros/: Cargo.toml  lib.rs
macros/zenith/: Cargo.toml  lib.rs
navi/: Cargo.toml  main.rs
src/: elf.rs  main.rs  parse.rs  utils.rs  x64.rs
stud/: Cargo.toml  args.rs  bigmac.rs  error.rs  lib.rs  log.rs  rt.rs  sync.rs
stud/bigmacs/: Cargo.toml  lib.rs  mod.rs
stud/macros/: Cargo.toml  args.rs  lib.rs
substrate/: Cargo.toml  error.rs  lib.rs  log.rs  macros.rs  main.rs
tests/chat/: Cargo.toml  chat.rs
tests/hello/: Cargo.toml  main.rs
zenith/: Cargo.toml  error.rs  lib.rs  log.rs
zenith/bridge/: mod.rs
zenith/macros/: Cargo.toml  lib.rs
