[workspace.package]
authors = ["Jack Foltz"]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    #
    "./zenith",
    "./substrate",
    "./navi",
]

[workspace.dependencies]
zenith = { path = "./zenith" }
substrate = { path = "./substrate" }
navi = { path = "./navi" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
