[workspace.package]
authors = ["Jack Foltz"]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    #
    "./zenith",
    "./stud",
    "./navi",

    "./tests/chat",
]

[workspace.dependencies]
zenith = { path = "./zenith" }
stud = { path = "./stud" }
navi = { path = "./navi" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
