[package]
name = "stud"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
error = ["dep:thiserror", "dep:anyhow"]
log = ["error", "dep:tracing", "dep:tracing-subscriber", "dep:yansi"]
bigmac = ["dep:bigmacs"]
rt = ["dep:tokio", "dep:futures"]
sync = ["dep:futures"]
args = ["dep:macros", "macros/args", "dep:clap"]

[dependencies]
macros = { path = "./macros", package = "stud-macros", optional = true }

# error
thiserror = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

# log
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
yansi = { version = "0.5", optional = true }

# bigmac
bigmacs = { path = "./bigmacs", optional = true }

# rt
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

# sync
futures = { version = "0.3", optional = true }

# args
clap = { version = "4", features = ["derive"], optional = true }
