[package]
name = "substrate"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["error", "log"]
error = ["dep:thiserror", "dep:anyhow"]
log = ["error", "dep:tracing", "dep:tracing-subscriber", "dep:yansi"]
macros = ["dep:proc-macro2", "dep:quote", "dep:syn"]

[dependencies]
# error
thiserror = { version = "1", optional = true }
anyhow = { version = "1", optional = true }

# log
# log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
yansi = { version = "0.5", optional = true }

# macros
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }
syn = { version = "2", optional = true }
