[package]
name = "zenith"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
bin = [
    "dep:zenith-macros",
    "dep:substrate",
    "substrate/log",
    "dep:clap",
    "dep:smol",
]

[dependencies]
# bin
zenith-macros = { path = "./macros", optional = true }
substrate = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"], optional = true }
smol = { version = "1", optional = true }
