[package]
name = "zenith"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
bin = ["dep:zenith-macros", "dep:stud", "stud/log", "stud/rt", "dep:clap"]

[dependencies]
# bin
zenith-macros = { path = "./macros", optional = true }
stud = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"], optional = true }
