[package]
name = "zenith-macros"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
substrate = { workspace = true, features = ["macros"] }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
